--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
 </head>
 <body>
 	<h1>测试网页</h1>
+	<script>
+		setTimeout(window.location.href="//github.com/zptcsoft/zptcsoft.github.io", 3000 )
+	</script>
 </body>
 </html>
